--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <div class="box">
-            <input type="text" id="item" autofocus placeholder="Write something here...">
+            <input type="text" id="item" autofocus placeholder="Write here...!">
             <ul id="to-do-box">
             </ul>
         </div>
