--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <h1>This is to-do list</h1>
     <main>
         <div class="box">
             <input type="text" id="item" autofocus placeholder="Write here...!">
